--- a/Assistant/Assistant/app/src/main/res/values/colors.xml
+++ b/Assistant/Assistant/app/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
 
     <color name="yellow_300">#FFF176</color>
     <color name="yellow_200">#FFF59D</color>
+    <color name="yellow_500">#FFEB3B</color>
 </resources>
