--- a/Assistant/Assistant/app/src/main/res/layout/activity_checklist.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/activity_checklist.xml
@@ -1,17 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lv_reminder"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/yellow_200"
-    android:orientation="vertical">
-
-    <ListView
-        android:layout_marginTop="8dp"
-        android:id="@+id/lv_reminder"
-        android:divider="@null"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ListView>
-</LinearLayout>
+    android:layout_height="match_parent"/>
