--- a/Assistant/Assistant/app/src/main/res/layout/checklist_item.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/checklist_item.xml
@@ -14,7 +14,8 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_width="wrap_content"
+        android:layout_toLeftOf="@+id/tv_deadline"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_name"/>
     <TextView
