--- a/Assistant/Assistant/app/src/main/res/values/colors.xml
+++ b/Assistant/Assistant/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
 
     <color name="gray_500">#9E9E9E</color>
     <color name="gray_400">#BDBDBD</color>
+    <color name="gray_200">#EEEEEE</color>
     <color name="gray_300">#E0E0E0</color>
     <color name="gray_800">#424242</color>
     <color name="gray_900">#212121</color>
