--- a/Assistant/Assistant/app/src/main/res/values/colors.xml
+++ b/Assistant/Assistant/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
 
     <color name="green">#1DBF97</color>
     <color name="red">#F44336</color>
-    
+    <color name="red_300">#E57373</color>
+
     <color name="indigo">#3F51B5</color>
 
     <color name="gray_500">#9E9E9E</color>
