--- a/Assistant/Assistant/app/src/main/res/layout/activity_checklist.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/activity_checklist.xml
@@ -3,5 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lv_reminder"
     android:layout_marginTop="8dp"
+    android:layout_marginBottom="24dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
