--- a/Assistant/Assistant/app/src/main/res/values/styles.xml
+++ b/Assistant/Assistant/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">sans-serif-light</item>
     </style>
 
     <style name="CheckListTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -13,7 +14,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/gray_400</item>
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
     </style>
+
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -28,5 +36,7 @@
         <item name="android:background">@drawable/fab_label_background</item>
         <item name="android:textColor">@color/secondary_text</item>
     </style>
+
+    
 
 </resources>
