--- a/Assistant/Assistant/app/src/main/res/layout/activity_main.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,30 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
+
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
 
     <include layout="@layout/fab_layout"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_reminder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@mipmap/ic_playlist_add_white_24dp"
+        android:visibility="gone" />
 
 </android.support.design.widget.CoordinatorLayout>
