--- a/Assistant/Assistant/app/src/main/res/layout/fab_layout.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/fab_layout.xml
@@ -1,24 +1,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame_layout"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="in.city.bytes.view.MainActivity">
-
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
-        <!--  floating action menu with buttons -->
+    android:layout_height="match_parent">
 
         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:id="@+id/fab_menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="5dp"
             fab:fab_addButtonColorNormal="@color/colorAccent"
             fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
             fab:fab_labelStyle="@style/menu_labels_style"
@@ -35,16 +29,6 @@
                 fab:fab_title="@string/fab_note_photographs" />
 
             <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_checklist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                fab:fab_colorNormal="@color/colorAccent"
-                fab:fab_colorPressed="@color/colorPrimaryDark"
-                fab:fab_icon="@mipmap/ic_playlist_add_check_white_24dp"
-                fab:fab_size="mini"
-                fab:fab_title="@string/fab_checklist" />
-
-            <com.getbase.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -55,5 +39,4 @@
                 fab:fab_title="@string/fab_note_text" />
 
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
-    </FrameLayout>
 </FrameLayout>
