--- a/Assistant/Assistant/app/src/main/res/values/colors.xml
+++ b/Assistant/Assistant/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#009688</color>
     <color name="colorPrimaryDark">#00796B</color>
     <color name="colorAccent">#009688</color>
+    <color name="indicator">#ecd95a</color>
 
 
     <color name="colorFAB1">#2196F3</color>
