--- a/Assistant/Assistant/app/src/main/res/layout/card_note_fragment.xml
+++ b/Assistant/Assistant/app/src/main/res/layout/card_note_fragment.xml
@@ -3,10 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/tv_test_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hello card note"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+        android:textStyle="bold"/>
 </LinearLayout>
